Fixed Swagger for post report route
